syntax = "proto3";
package cardchain.cardchain;

option go_package = "github.com/DecentralCardGame/cardchain/x/cardchain/types";

message VotingResults {

  uint64 totalVotes = 1;
  uint64 totalFairEnoughVotes = 2;
  uint64 totalOverpoweredVotes = 3;
  uint64 totalUnderpoweredVotes = 4;
  uint64 totalInappropriateVotes = 5;
  repeated VotingResult cardResults = 6;
  string notes = 7;
}

message VotingResult {

  uint64 cardId = 1;
  uint64 fairEnoughVotes = 2;
  uint64 overpoweredVotes = 3;
  uint64 underpoweredVotes = 4;
  uint64 inappropriateVotes = 5;
  string result = 6;
}

message SingleVote {
  uint64 cardId = 1;
  VoteType voteType = 2;
}

enum VoteType {
  fairEnough = 0;
  inappropriate = 1;
  overpowered = 2;
  underpowered = 3;
}
